test/domains/compilerErrors/sparseSubdom-mismatch-1.chpl
use List;
const dr = {1:int(8)..8:int(8)};
const sd: sparse subdomain(dr) = new list(int); // error: int8 <- int64
