test/domains/compilerErrors/sparseSubdom-mismatch-1.good
sparseSubdom-mismatch-1.chpl:3: error: cannot add a int(64) to a sparse 1-dim domain with idxType int(8)
